# C-CMake

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
HelloWorld/: .gitmodules  CMakeLists.txt
HelloWorld/app/: CMakeLists.txt  main.cc
HelloWorld/cmake/: AddGitSubmodule.cmake
HelloWorld/src/my_lib/: CMakeLists.txt
app/: CMakeLists.txt  main.cc
cmake/: AddGitSubmodule.cmake  Docs.cmake  Warnings.cmake
configured/: CMakeLists.txt
docs/html/: _c_make_lists_8txt.html  dir_08ebf401352d0c333d3a643fc2ed36cf.html  dir_08ebf401352d0c333d3a643fc2ed36cf_dep.map  dir_08ebf401352d0c333d3a643fc2ed36cf_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  my__lib_2_c_make_lists_8txt.html  my__lib_8cc.html  my__lib_8cc__incl.map  my__lib_8cc__incl.md5  my__lib_8h.html  my__lib_8h__dep__incl.map  my__lib_8h__dep__incl.md5  my__lib_8h__incl.map  my__lib_8h__incl.md5  my__lib_8h_source.html
docs/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  functions_0.js
src/my_lib/: CMakeLists.txt  my_lib.cc  my_lib.h
tests/: CMakeLists.txt  main.cc
